<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/rounder_backgrund_shear"
    android:orientation="vertical"
    android:id="@+id/result"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_40sdp">

        <TextView
            android:id="@+id/sharehead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:text="@string/speed_test_results"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_13sdp" />

        <TextView
            android:id="@+id/subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/sharehead"
            android:layout_alignParentLeft="true"

            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_6sdp"

            android:text="@string/speed_test_by_devil_speed_test"
            android:textColor="@android:color/tab_indicator_text"
            android:textSize="@dimen/_10sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dateview"
            android:text="@string/_2020_07_13"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_10sdp"
            android:textStyle="bold"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_10sdp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/timeview"
            android:text="@string/currenttime"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_10sdp"
            android:textStyle="bold"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_10sdp"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_4sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:weightSum="3"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_3sdp"
                android:layout_gravity="center"
                android:layout_height="@dimen/_16sdp"
                android:background="@drawable/ic_ping_icon"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="PING"
                android:layout_gravity="center"
                android:id="@+id/tping"
                android:textStyle="bold"
                android:textSize="@dimen/_14sdp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0 ms"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_15sdp"
                android:id="@+id/rping"/>
        </LinearLayout>

        <LinearLayout
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="@dimen/_16sdp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_3sdp"
                android:layout_height="@dimen/_16sdp"
                android:background="@drawable/ic_download_icon"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="DOWNLOAD"
                android:layout_gravity="center"
                android:id="@+id/tdownload"
                android:textStyle="bold"
                android:textSize="@dimen/_14sdp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0 Mbps"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_15sdp"
                android:id="@+id/rdownload"/>
        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_3sdp"
                android:layout_gravity="center"
                android:layout_height="@dimen/_16sdp"
                android:background="@drawable/ic_upload_icon"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="UPLOAD"
                android:layout_gravity="center"
                android:id="@+id/tupload"
                android:textStyle="bold"
                android:textSize="@dimen/_14sdp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0 Mbps"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_15sdp"
                android:id="@+id/rupload"/>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/_3sdp"
        android:layout_height="@dimen/_40sdp">

        <TextView
            android:layout_width="match_parent"
            android:id="@+id/thostingname"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/servercountry"
            android:textSize="@dimen/_12sdp"/>


        <TextView
            android:layout_width="match_parent"
            android:id="@+id/tlocationname"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/country"
            android:textSize="@dimen/_12sdp"/>


    </RelativeLayout>

</LinearLayout>