<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/newbg">

    <RelativeLayout
        android:id="@+id/relativelayout_toolbar_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/textViewInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <!--network type-->
        <TextView
            android:id="@+id/type"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_20sdp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/rounder_text_backgrund"
            android:gravity="center"
            android:padding="5dp"
            android:text="---"
            android:textColor="@color/maintextcolor"
            android:textSize="@dimen/_10sdp" />

        <!--app name-->
        <TextView
            android:id="@+id/heder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="5dp"
            android:text="@string/app_name"
            android:textColor="@color/headerTextColour"
            android:textSize="@dimen/_15sdp" />
        <!--Star buttom-->
        <Button
            android:id="@+id/thisapprating"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginRight="@dimen/_8sdp"
            android:background="@drawable/ic_stars" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textViewInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/textViewNetworkType"
        android:textSize="20sp"
        android:textColor="@color/headerTextColour"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativelayout_toolbar_home" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewInfo">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/net_speed"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="30dp"
            android:background="@drawable/background_card"
            android:padding="1dp">

            <TextView
                android:id="@+id/textViewlive"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="Data Speed"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/textView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!--download text-->
            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/download"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                app:layout_constraintBottom_toTopOf="@+id/download"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewlive" />

            <TextView
                android:id="@+id/download"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/speedText"
                android:textColor="@color/maintextcolor"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/textViewup"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/textViewup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/upload"
                android:textColor="@color/textColor"
                android:textSize="15sp"
                android:layout_marginTop="5dp"
                app:layout_constraintBottom_toTopOf="@+id/upload"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/download" />

            <TextView
                android:id="@+id/upload"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/speedText"
                android:textColor="@color/maintextcolor"

                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/datauses"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewup" />


            <ImageView
                android:id="@+id/datauses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:rotation="90"
                android:src="@drawable/ic_upload_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/upload"
                app:tint="@color/maintextcolor" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativelayout_toolbar_home"


            >


            <!--Swith mb kb -->
            <com.jtv7.rippleswitchlib.RippleSwitch
                android:id="@+id/rippleSwitch"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_165sdp"
                app:rs_checked_color="@color/headerTextColour"
                app:rs_unchecked_color="@color/maintextcolor" />
            <!--text mb kb-->
            <TextView
                android:id="@+id/datametartype"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_195sdp"
                android:text="MEGABIT PER SECOND"
                android:textColor="@color/maintextcolor"
                android:textSize="@dimen/_10sdp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_250sdp">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    app:srcCompat="@drawable/megabitps" />

                <ImageView
                    android:id="@+id/barImageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    app:srcCompat="@drawable/shelf" />
            </RelativeLayout>

            <ImageView
                android:id="@+id/dddd"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_75sdp"
                android:layout_marginTop="@dimen/_200sdp"
                android:background="@drawable/wave"
                android:orientation="vertical" />

        </RelativeLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/fhost"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="SERVER"
                        android:textAlignment="center"
                        android:textColor="@color/subtext"
                        android:textSize="@dimen/_12sdp"
                        android:textStyle="normal|bold" />

                    <TextView
                        android:id="@+id/host"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="- - -"
                        android:textAlignment="center"
                        android:textColor="@color/maintextcolor"
                        android:textSize="@dimen/_10sdp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/fping"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="PING"
                        android:textAlignment="center"
                        android:textColor="@color/subtext"
                        android:textSize="@dimen/_12sdp"
                        android:textStyle="normal|bold" />

                    <TextView
                        android:id="@+id/pingTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="0 ms"
                        android:textAlignment="center"
                        android:textColor="@color/maintextcolor"
                        android:textSize="@dimen/_10sdp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/flocation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="LOCATION"
                        android:textAlignment="center"
                        android:textColor="@color/subtext"
                        android:textSize="@dimen/_12sdp"
                        android:textStyle="normal|bold" />

                    <TextView
                        android:id="@+id/location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="- - -"
                        android:textAlignment="center"
                        android:textColor="@color/maintextcolor"
                        android:textSize="@dimen/_10sdp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="2">


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="DOWNLOAD"
                        android:textAlignment="center"
                        android:textColor="@color/subtext"
                        android:textSize="@dimen/_18sdp"
                        android:textStyle="normal|bold" />

                    <TextView
                        android:id="@+id/downloadTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:text="0 Mbps"
                        android:textAlignment="center"
                        android:textColor="@color/maintextcolor"
                        android:textSize="@dimen/_20sdp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="UPLOAD"
                        android:textAlignment="center"
                        android:textColor="@color/subtext"
                        android:textSize="@dimen/_18sdp"
                        android:textStyle="normal|bold" />

                    <TextView
                        android:id="@+id/uploadTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:text="0 Mbps"
                        android:textAlignment="center"
                        android:textColor="@color/maintextcolor"
                        android:textSize="@dimen/_20sdp" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_12sdp"
            android:orientation="vertical">

            <Button
                android:id="@+id/startButton"
                android:layout_width="@dimen/_175sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center"
                android:background="@drawable/rounder_backgrund"
                android:text="Test Network"
                android:textColor="@color/subtext"
                android:textSize="@dimen/_13sdp" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>